<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Team Manager</string>
    <string name="tv_usuario">Usuario</string>
    <string name="tv_pass">Password</string>
    <string name="tv_rpass">Repita password</string>
    <string name="action_settings">Settings</string>
    <string name="action_convocatoria">Convocatoria</string>
    <string name="title_activity_nuevo_usuario">Nuevo usuario</string>
    <string name="alerta">Aviso! nueva notificación</string>
    <string name="title_activity_mis_equipos">Mis Equipos</string>
    <string name="title_activity_mis_compis_de_equipo">Mis compañeros de equipo</string>
    <string name="title_activity_buscador">Buscador</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_convocatoria">Convocatoria</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="title_activity_estadisticas">Estadisticas</string>
    <string name="progress_enviando">enviando datos...</string>
    <string name="nohaydatos">no hay datos</string>
    <string name="hint_nombreequipo">Nombre del equipo</string>
    <string name="hint_nombrejugador">Nombre del jugador</string>
    <string name="toast_peticionrealizada">petición realizada</string>
    <string name="toast_peticionnorealizada">no se pudo realizar la peticion</string>
    <string name="toast_noequipo">no juega en ningún equipo</string>
    <string name="toast_noequipodispo">no hay equipos disponibles</string>
    <string name="toast_nojugadoresdispo">no hay jugadores disponibles</string>
    <string name="toast_usuborrado">Usuario borrado</string>
    <string name="toast_intronombre">introduzca un nombre</string>
    <string name="tv_media"> tu media es: </string>
    <string name="tv_cerrarsesion"> Cerrar sesión </string>
    <string name="usuincorrecto">Nombre de usuario o password incorrectos</string>
    <string name="toast_noconvocat">no hay convocatoria</string>
    <string name="boton_enviar">Enviar</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_registrar">Registrar</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_mostrarest">Mostrar Estadisticas</string>
    <string name="tv_tiporden">Tipo de orden:</string>
    <string name="tv_peti">Peticiones</string>
    <string name="tv_orden">Ordenar por:</string>
    <string name="tv_vmax">Valoración máxima:</string>
    <string name="tv_vmin">Valoración mínima:</string>
    <string name="tv_filtrar">Filtrar por:</string>
    <string name="tv_ascendente">Ascendente</string>
    <string name="tv_descendente">Descendente</string>
    <string name="tv_valmin">Valoracion mínima:</string>
    <string name="tv_valmax">Valoracion máxima:</string>
    <string name="rb_fecha">Fecha</string>
    <string name="rb_valoracion">Valoración</string>
    <string name="rb_equipo">Equipo</string>
    <string name="rb_equipos">Mis equipos</string>
    <string name="rb_jugador">Jugador</string>
    <string name="rb_todos">Todos</string>
    <string name="rb_solo">Solo</string>
    <string name="toast_votoreg">tu voto a sido registrado</string>
    <string name="toast_votonoreg">ya hizo el voto semanal</string>
    <string name="toast_errorvotoreg">error de voto</string>
    <string name="toast_usuarioreg">usuario registrado</string>
    <string name="toast_usuarioigual">ya existe un usuario con ese nombre</string>
    <string name="toast_contranoigual">las contraseñas no coinciden</string>
    <string name="toast_rellena">introduzca los datos</string>
</resources>
