<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.antonio.android.appwebequipo.Formulario"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tiporden"
        android:id="@+id/textView4"
        android:textColor="#FFFFFF"
        style="@style/textview"
        android:drawableBottom="#eaf90c"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/rbgOrdenarPor"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_fecha"
                android:onClick="fecha"
                android:id="@+id/rbFecha"
                android:checked="false"
                android:layout_gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_valoracion"
                android:onClick="valoracion"
                android:id="@+id/rbValoracion"
                android:checked="false"
                android:layout_gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_equipo"
                android:onClick="equipo"
                android:id="@+id/rbEquipo"
                android:checked="false"
                android:layout_gravity="center" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_orden"
        style="@style/textview"
        android:drawableBottom="#eaf90c"
        android:id="@+id/textView"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:id="@+id/rbgOrden"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ascendente"
                android:onClick="ascendente"
                android:id="@+id/rbAsc"
                android:checked="false"
                android:layout_gravity="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_descendente"
                android:onClick="descendente"
                android:id="@+id/rbDesc"
                android:checked="false"
                android:layout_gravity="center" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_valmin"
            android:id="@+id/textView5"
            style="@style/textview"
            android:drawableBottom="#eaf90c"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_valmax"
            android:id="@+id/textView6"
            style="@style/textview"
            android:drawableBottom="#eaf90c"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/npD"
            android:gravity="center_horizontal"
            android:layout_marginRight="35dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/npH"
            android:gravity="center_horizontal"
            android:layout_marginLeft="35dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_filtrar"
        android:id="@+id/textView7"
        style="@style/textview"
        android:drawableBottom="#eaf90c"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_solo"
            android:id="@+id/textView8"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_todos"
            android:id="@+id/textView9"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_equipos"
            android:id="@+id/textView10"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_equipo"
            android:id="@+id/textView11"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableBottom="#eaf90c"
            android:text="@string/rb_jugador"
            android:id="@+id/textView12"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:id="@+id/rbgFiltro">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbYo"
                android:onClick="yo"
                android:checked="false"
                android:textSize="10dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbTodos"
                android:onClick="todos"
                android:checked="false"

                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="misEquipos"
                android:id="@+id/rbMisEquipos"
                android:checked="false"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buscaEquipo"
                android:id="@+id/rbMiEquipo"
                android:checked="false"
                android:textSize="10dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:onClick="buscaJugador"
                android:id="@+id/rbJugador"
                android:checked="false"
                android:layout_weight="1"
                android:textSize="10dp" />

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:id="@+id/etNombre"
        android:background="@drawable/edittext_rounded_corners"
        android:paddingBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="2dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/boton_mostrarest"
        android:id="@+id/btEstadisticas"
        style="@style/button"
        android:onClick="misEstadisticas"
        android:layout_gravity="bottom"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="3dp" />

</LinearLayout>
