<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.antonio.android.appwebequipo.MisEquipos">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rb_equipos"
        android:id="@+id/tvEquiposME"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center"
        style="@style/textview"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lvMisEquipos"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_peti"
        android:id="@+id/tvPetME"
        style="@style/textview"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_equipo"
            android:id="@+id/tvEquipME"
            android:layout_weight="1"
            style="@style/textview"

            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_jugador"
            android:id="@+id/tvJugME"
            style="@style/textview"

            android:layout_weight="1"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lvPeticiones"
        android:layout_weight="1" />
</LinearLayout>
